fix display issue on mobile

--- a/src/scss/_aboutMe.scss
+++ b/src/scss/_aboutMe.scss
@@ -27,4 +27,8 @@
         
         margin: 0 auto;
     }
+
+    .bioContainer {
+        width: 100%;
+    }
 }
